# attention_warp

./: README.md  pyproject.toml
DDPM_inversion/ddm_inversion/: inversion_utils.py
attn_warp/: metrics.py  render_utils.py  utils.py  visualization_utils.py
ip2p/: _2dgs.py  warp_attention.py  warp_attention_config.py  warp_attention_pipeline.py
splatfacto_2dgs/: config.py  splatfacto_2dgs.py
